# defake_0

./: README.md
apps/miniapp/: package-lock.json  package.json
apps/miniapp/src/: App.tsx
apps/miniapp/src/components/: AdjusterView.tsx  ClaimSubmission.tsx  DFICChat.tsx  FileUploader.tsx  ProofReceipt.tsx  PublicVerifier.tsx
contracts/defake_anchor/: Cargo.toml  build.sh  defake_anchor.wasm
contracts/defake_anchor/src/: lib.rs
contracts/near/: README.md
docs/: architecture.md
services/api/: README.md  env.example  main.py  requirements.txt  supabase-schema.sql
services/api/config/: near.py  supabase.py
services/api/routes/: anchor.py  health.py  verify.py
